--- a/.github/workflows/polystore-benchmark-test.yml
+++ b/.github/workflows/polystore-benchmark-test.yml
@@ -96,7 +96,7 @@ jobs:
               shell: bash
               run: |
                   pwd
-                  if [ "$RUNNER_OS" = "Windows" ]; then
+                  if [ "$RUNNER_OS" == "Windows" ]; then
                     python test/src/test/java/cn/edu/tsinghua/iginx/integration/polybench/TPCHRunner.py
                   else
                     python3 test/src/test/java/cn/edu/tsinghua/iginx/integration/polybench/TPCHRunner.py
