--- a/test/src/test/resources/testConfig.properties
+++ b/test/src/test/resources/testConfig.properties
@@ -58,3 +58,11 @@ PostgreSQL_port=5432,5433,5434
 MongoDB_port=27017,27018,27019
 Redis_port=6379,6380,6381
 FileSystem_port=6667,6668,6669
+
+# Local test stand-alone
+stand_alone_DB=IoTDB12
+
+# Local test DB-CE
+is_scaling=false
+DBCE_test_way=oriHasDataExpHasData
+
