--- a/.github/workflows/remote-test.yml
+++ b/.github/workflows/remote-test.yml
@@ -41,12 +41,6 @@ jobs:
                   Restart-Computer -Force
                   Start-Sleep -s 60
                 }
-                Get-NetFirewallProfile
-                Set-NetFirewallProfile -Profile Public -Enabled False
-                echo "############################"
-                Get-NetFirewallRule
-                New-NetFirewallRule -DisplayName "Allow ICMPv4-In" -Protocol ICMPv4 -IcmpType 8 -Action Allow -Direction Inbound
-                New-NetFirewallRule -DisplayName "Allow ICMPv4-Out" -Protocol ICMPv4 -IcmpType 8 -Action Allow -Direction Outbound
 
             - if: runner.os == 'Windows'
               name: Create Docker Network
@@ -55,21 +49,15 @@ jobs:
                 ipconfig
                 docker --version
                 docker network ls
-                docker network create -d nat --attachable --subnet 172.40.0.0/16 docker-cluster-iginx
-                docker network create -d transparent TransNet
+#                docker network create -d nat --attachable --subnet 172.40.0.0/16 docker-cluster-iginx
+#                docker network create -d transparent TransNet
 
-            - name: Run Docker container and test network
+            - if: runner.os == 'Windows'
+              name: Modify start script(only for test)
+              shell: bash
               run: |
-                docker run --name=test-container -d mcr.microsoft.com/windows/servercore:ltsc2022 ping 8.8.8.8
-                Start-Sleep -s 10
-                docker logs test-container
-
-            - name: Clean up
-              run: |
-                docker stop test-container
-                docker rm test-container
-
-
+                chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/cli/mod_start_cli_bat.sh"
+                "${GITHUB_WORKSPACE}/.github/scripts/test/cli/mod_start_cli_bat.sh"
 
             - if: runner.os == 'Windows'
               name: Build & Run Client image
