--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -23,14 +23,18 @@ jobs:
                 os: [ubuntu-latest]
                 DB-name:
                     [
-                        "FileSystem",
-                        "IoTDB12",
-                        "InfluxDB",
-                        "PostgreSQL",
-                        "Redis",
-                        "MongoDB",
-                        "Parquet",
+                      "PostgreSQL",
+                      "Redis",
                     ]
+#                    [
+#                        "FileSystem",
+#                        "IoTDB12",
+#                        "InfluxDB",
+#                        "PostgreSQL",
+#                        "Redis",
+#                        "MongoDB",
+#                        "Parquet",
+#                    ]
                 metadata: [zookeeper]
         runs-on: ${{ matrix.os }}
         env:
