--- a/docker/client/Dockerfile-windows
+++ b/docker/client/Dockerfile-windows
@@ -22,6 +22,7 @@ RUN setx /M PATH "%JAVA_HOME%\bin;%PATH%"
 SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
 
 RUN Get-ChildItem -Path "C:\Program Files\Eclipse Adoptium\jdk-8.0.402.6-hotspot\"
+RUN Get-ChildItem -Path "%JAVA_HOME%\bin"
 
 # 下载 JDK
 ADD https://download.java.net/java/GA/jdk11/9/GPL/openjdk-11.0.2_windows-x64_bin.zip C:/temp/jdk.zip
