remove iginx failure process

--- a/test/src/test/resources/testConfig.properties
+++ b/test/src/test/resources/testConfig.properties
@@ -3,8 +3,8 @@
 storageEngineList=IoTDB12,InfluxDB,Parquet,PostgreSQL,MongoDB,Redis,FileSystem
 
 # the test for every engine
-test-list=DataSourceIT,SQLSessionIT,SQLSessionPoolIT,SQLCompareIT,NewSessionIT,TagIT,RestAnnotationIT,RestIT,TransformIT,UDFIT,SessionV2IT,SessionIT,SessionPoolIT,CompactionIT,TimePrecisionIT,PySessionIT
-mongodb-test-list=DataSourceIT,SQLSessionIT,SQLSessionPoolIT,SQLCompareIT,NewSessionIT,TagIT,RestAnnotationIT,RestIT,UDFIT,TransformIT,SessionV2IT,CompactionIT,TimePrecisionIT,PySessionIT
+test-list=PySessionIT
+mongodb-test-list=PySessionIT
 
 # the DB config
 # isSupportDiffTypeHistoryData: 跟dummy有关，是否历史数据写进去和查出来不一样，主要是key不一样和value的类型不一样
