--- a/.github/workflows/standalone-test.yml
+++ b/.github/workflows/standalone-test.yml
@@ -18,7 +18,7 @@ jobs:
             matrix:
                 java: [8]
                 python-version: ["3.9"]
-                os: [ubuntu-latest]
+                os: [ubuntu-latest, macos-13, windows-latest]
                 DB-name:
                     [
                         "IoTDB12",
