fix problems when resolving conflicts

--- a/conf/config.properties
+++ b/conf/config.properties
@@ -188,7 +188,7 @@ restIp=0.0.0.0
 restPort=6666
 
 # 是否启用 rest 服务
-enableRestService=false
+enableRestService=true
 
 # 乱序数据 margin, 单位是秒
 disorderMargin=10
