Change replica mechanism

--- a/conf/config.properties
+++ b/conf/config.properties
@@ -73,7 +73,8 @@ constraintChecker=naive
 physicalOptimizer=naive
 
 # 分片策略
-policyClassName=cn.edu.tsinghua.iginx.policy.naive.NaivePolicy
+policyClassName=cn.edu.tsinghua.iginx.policy.range.RangePolicy
+#policyClassName=cn.edu.tsinghua.iginx.policy.naive.NaivePolicy
 #policyClassName=cn.edu.tsinghua.iginx.policy.simple.SimplePolicy
 
 #统计信息收集类
@@ -249,3 +250,11 @@ enableEnvParameter=false
 
 # 读取csv文件时，每批数据的行数
 batchSizeImportCsv=10000
+
+# AYZ
+keyIntervalsForRangePolicy=0,9223372036854775807
+#keyIntervalsForRangePolicy=0,10000;10000,20000;20000,9223372036854775807
+
+columnsForRangePolicy=/path/to/file
+
+columnsIntervalsForRangePolicy=/path/to/file
