chore(ci): cache dependences and database binaries  (#325)
缓存 pip 和 maven 库
缓存数据库二进制文件
详细说明：https://oxlh5mrwi0.feishu.cn/docx/AyL0dz4fzo295JxruQRc4aoenzf

--- a/.github/actions/zookeeperRunner/action.yml
+++ b/.github/actions/zookeeperRunner/action.yml
@@ -17,40 +17,29 @@ runs:
     using: "composite" # Mandatory parameter
     steps:
         - if: inputs.if-stop=='false' && inputs.if-rerun=='false'
-          name: Run ZooKeeper
-          shell: bash
-          run: |
-              if [ "$RUNNER_OS" == "Linux" ]; then
-                chmod +x "${GITHUB_WORKSPACE}/.github/scripts/metadata/zk.sh"
-                "${GITHUB_WORKSPACE}/.github/scripts/metadata/zk.sh"
-              elif [ "$RUNNER_OS" == "macOS" ]; then
-                chmod +x "${GITHUB_WORKSPACE}/.github/scripts/metadata/zk_macos.sh"
-                "${GITHUB_WORKSPACE}/.github/scripts/metadata/zk_macos.sh"
-              elif [ "$RUNNER_OS" == "Windows" ]; then
-                chmod +x "${GITHUB_WORKSPACE}/.github/scripts/metadata/zk_windows.sh"
-                "${GITHUB_WORKSPACE}/.github/scripts/metadata/zk_windows.sh"
-              else
-                echo "$RUNNER_OS is not supported"
-                exit 1
-              fi
+          name: First Run ZooKeeper | Setup
+          uses: ./.github/actions/setup/zookeeper
 
-        - if: ${{ inputs.if-rerun=='true' && runner.os != 'Windows' }}
-          name: ReRun ZooKeeper
-          shell: bash
-          run: |
-              zookeeper/bin/zkServer.sh start
+        - if: inputs.if-stop=='false' && inputs.if-rerun=='false'
+          name: First Run ZooKeeper
+          uses: ./.github/actions/service/zookeeper
+          with:
+              stop: false
+              clean: false
+              start: true
 
-        - if: ${{ inputs.if-rerun=='true' && runner.os == 'Windows' }}
+        - if: inputs.if-rerun=='true'
           name: ReRun ZooKeeper
-          shell: powershell
-          run: |
-              Start-Process -FilePath 'zookeeper/bin/zkServer.cmd'
-              sleep 3
-              netstat -ano | findstr 2181
+          uses: ./.github/actions/service/zookeeper
+          with:
+              stop: false
+              clean: false
+              start: true
 
         - if: inputs.if-stop=='true'
           name: Stop ZooKeeper
-          shell: bash
-          run: |
-              chmod +x "${GITHUB_WORKSPACE}/.github/scripts/metadata/zk_clear.sh"
-              "${GITHUB_WORKSPACE}/.github/scripts/metadata/zk_clear.sh"
+          uses: ./.github/actions/service/zookeeper
+          with:
+              stop: true
+              clean: true
+              start: false
