--- a/.github/actions/benchmarkRunner/action.yml
+++ b/.github/actions/benchmarkRunner/action.yml
@@ -39,14 +39,20 @@ runs:
           shell: bash
           run: |
               if [ "$RUNNER_OS" == "Linux" ]; then
+                echo "Linux"
                 chmod +x "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx.sh"
                 "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx.sh" 6888 6666
+                echo "Linux"
               elif [ "$RUNNER_OS" == "Windows" ]; then
+                echo "Windows"
                 chmod +x "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx_windows.sh"
                 "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx_windows.sh" 6888 6666
+                echo "Windows"
               elif [ "$RUNNER_OS" == "macOS" ]; then
+                echo "macOS"
                 chmod +x "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx_macos.sh"
                 "${GITHUB_WORKSPACE}/.github/scripts/iginx/iginx_macos.sh" 6888 6666
+                echo "macOS"
               fi
 
         - if: inputs.if-test-udf=='false' && inputs.if-stop=='true'
