--- a/.github/workflows/polystore-benchmark-test.yml
+++ b/.github/workflows/polystore-benchmark-test.yml
@@ -19,6 +19,7 @@ jobs:
                 java: [8]
                 python-version: ["3.9"]
                 os: [ubuntu-latest, macOS-11, windows-latest]
+                metadata: [zookeeper]
         runs-on: ${{ matrix.os }}
 
         steps:
@@ -76,7 +77,8 @@ jobs:
             - name: set client test context
               uses: ./.github/actions/context
               with:
-                  work-name: restart-iginx-zk
+                  work-name: restart-iginx-meta
+                  metadata: ${{ matrix.metadata }}
 
             - name: set client test context
               uses: ./.github/actions/context
