--- a/.github/workflows/remote-test.yml
+++ b/.github/workflows/remote-test.yml
@@ -34,7 +34,8 @@ jobs:
                   python-version: ${{ matrix.python-version }}
                   java: ${{ matrix.java }}
 
-            - name: Set up Docker
+            - if: runner.os == 'Windows'
+              name: Set up Docker Firewall on Windows
               run: |
                 $feature = Install-WindowsFeature -Name Containers
                 if ($feature.RestartNeeded -eq 'Yes') {
@@ -46,29 +47,6 @@ jobs:
                 echo "############################"
                 New-NetFirewallRule -DisplayName "Allow ICMPv4-In" -Protocol ICMPv4 -IcmpType 8 -Action Allow -Direction Inbound
                 New-NetFirewallRule -DisplayName "Allow ICMPv4-Out" -Protocol ICMPv4 -IcmpType 8 -Action Allow -Direction Outbound
-
-            - if: runner.os == 'Windows'
-              name: Create Docker Network
-              shell: cmd
-              run: |
-                ipconfig
-                docker --version
-                docker network ls
-#                docker network create -d nat --attachable --subnet 172.40.0.0/16 docker-cluster-iginx
-#                docker network create -d transparent TransNet
-
-            - if: runner.os == 'Windows'
-              name: Modify start script(only for test)
-              shell: bash
-              run: |
-                chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/cli/mod_start_cli_bat.sh"
-                "${GITHUB_WORKSPACE}/.github/scripts/test/cli/mod_start_cli_bat.sh"
-
-            - if: runner.os == 'Windows'
-              name: Build & Run Client image
-              shell: cmd
-              run: |
-                mvn clean package -q -pl client -am -Dmaven.test.skip=true -P-format && cd %GITHUB_WORKSPACE%\docker\client && build.bat && run_docker.bat
 
             - name: Run Metadata
               uses: ./.github/actions/metadataRunner
@@ -86,21 +64,20 @@ jobs:
                   mvn clean package -DskipTests -P-format -q
 
             - if: runner.os != 'Windows'
-              name: Create Docker Network
-              shell: bash
-              run: |
-                docker --version
-                docker network create -d bridge --attachable --subnet 172.40.0.0/16 docker-cluster-iginx
-
-            - if: runner.os != 'Windows'
               name: Build & Run Client image
               shell: bash
               run: |
                   cd ${GITHUB_WORKSPACE}/docker/client && \
-                  chmod +x "build.sh" && \
+                  chmod +x "build-no-maven.sh" && \
                   chmod +x "run_docker.sh" && \
-                  "./build.sh" && \
+                  "./build-no-maven.sh" && \
                   "./run_docker.sh"
+
+            - if: runner.os == 'Windows'
+              name: Build & Run Client image
+              shell: cmd
+              run: |
+                cd %GITHUB_WORKSPACE%\docker\client && build-no-maven.bat && run_docker.bat
 
             - name: Change IGinX config
               uses: ./.github/actions/confWriter
@@ -108,26 +85,23 @@ jobs:
                 DB-name: ${{ matrix.DB-name }}
                 Set-Filter-Fragment-OFF: "true"
                 Metadata: ${{ matrix.metadata }}
-                Switch-DB: "true"
+#                Switch-DB: "true"
 
             - name: Start IGinX
               uses: ./.github/actions/iginxRunner
               with:
                 version: ${VERSION}
 
-            - if: runner.os == 'Windows'
-              name: Register Remote UDFs
+            - name: Register Remote UDFs
               shell: bash
               run: |
+                if [[ "$RUNNER_OS" == "Linux" || "$RUNNER_OS" == "macOS" ]]; then
+                  chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_remote_udf.sh"
+                  "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_remote_udf.sh" ${{ matrix.os }}
+                else
                   chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_remote_udf_windows.sh"
-                  "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_remote_udf_windows.sh" ${{ matrix.os }}
-
-            - if: runner.os != 'Windows'
-              name: Register Remote UDFs
-              shell: bash
-              run: |
-                chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_remote_udf.sh"
-                "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_remote_udf.sh" ${{ matrix.os }}
+                  "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_remote_udf_windows.sh"
+                fi
 
             - name: Run Tests
               shell: bash
