--- a/.github/workflows/remote-test.yml
+++ b/.github/workflows/remote-test.yml
@@ -19,10 +19,16 @@ jobs:
             matrix:
                 java: [8]
                 python-version: ["3.9"]
-                os: [windows-latest]
+                os: [ubuntu-latest, macos-13, windows-latest]
                 DB-name:
                     [
-                        "Parquet"
+                        "IoTDB12",
+                        "InfluxDB",
+                        "Parquet",
+                        "PostgreSQL",
+                        "FileSystem",
+                        "Redis",
+                        "MongoDB",
                     ]
                 metadata: [zookeeper]
         runs-on: ${{ matrix.os }}
@@ -37,26 +43,26 @@ jobs:
             - if: runner.os == 'Windows'
               name: Set up Docker Firewall on Windows
               run: |
-                $feature = Install-WindowsFeature -Name Containers
-                if ($feature.RestartNeeded -eq 'Yes') {
-                  Restart-Computer -Force
-                  Start-Sleep -s 60
-                }
-                Get-NetFirewallProfile
-                Set-NetFirewallProfile -Profile Public -Enabled False
-                echo "############################"
-                New-NetFirewallRule -DisplayName "Allow ICMPv4-In" -Protocol ICMPv4 -IcmpType 8 -Action Allow -Direction Inbound
-                New-NetFirewallRule -DisplayName "Allow ICMPv4-Out" -Protocol ICMPv4 -IcmpType 8 -Action Allow -Direction Outbound
+                  $feature = Install-WindowsFeature -Name Containers
+                  if ($feature.RestartNeeded -eq 'Yes') {
+                    Restart-Computer -Force
+                    Start-Sleep -s 60
+                  }
+                  Get-NetFirewallProfile
+                  Set-NetFirewallProfile -Profile Public -Enabled False
+                  echo "############################"
+                  New-NetFirewallRule -DisplayName "Allow ICMPv4-In" -Protocol ICMPv4 -IcmpType 8 -Action Allow -Direction Inbound
+                  New-NetFirewallRule -DisplayName "Allow ICMPv4-Out" -Protocol ICMPv4 -IcmpType 8 -Action Allow -Direction Outbound
 
             - name: Run Metadata
               uses: ./.github/actions/metadataRunner
               with:
-                metadata: ${{ matrix.metadata }}
+                  metadata: ${{ matrix.metadata }}
 
             - name: Run DB
               uses: ./.github/actions/dbRunner
               with:
-                DB-name: ${{ matrix.DB-name }}
+                  DB-name: ${{ matrix.DB-name }}
 
             - name: Install IGinX with Maven
               shell: bash
@@ -77,31 +83,31 @@ jobs:
               name: Build & Run Client image
               shell: cmd
               run: |
-                cd %GITHUB_WORKSPACE%\docker\client && build-no-maven.bat && run_docker.bat
+                  cd %GITHUB_WORKSPACE%\docker\client && build-no-maven.bat && run_docker.bat
 
             - name: Change IGinX config
               uses: ./.github/actions/confWriter
               with:
-                DB-name: ${{ matrix.DB-name }}
-                Set-Filter-Fragment-OFF: "true"
-                Metadata: ${{ matrix.metadata }}
-#                Switch-DB: "true"
+                  DB-name: ${{ matrix.DB-name }}
+                  Set-Filter-Fragment-OFF: "true"
+                  Metadata: ${{ matrix.metadata }}
+            #                Switch-DB: "true"
 
             - name: Start IGinX
               uses: ./.github/actions/iginxRunner
               with:
-                version: ${VERSION}
+                  version: ${VERSION}
 
             - name: Register Remote UDFs
               shell: bash
               run: |
-                if [[ "$RUNNER_OS" == "Linux" || "$RUNNER_OS" == "macOS" ]]; then
-                  chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_remote_udf.sh"
-                  "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_remote_udf.sh" ${{ matrix.os }}
-                else
-                  chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_remote_udf_windows.sh"
-                  "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_remote_udf_windows.sh"
-                fi
+                  if [[ "$RUNNER_OS" == "Linux" || "$RUNNER_OS" == "macOS" ]]; then
+                    chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_remote_udf.sh"
+                    "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_remote_udf.sh" ${{ matrix.os }}
+                  else
+                    chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_remote_udf_windows.sh"
+                    "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_remote_udf_windows.sh"
+                  fi
 
             - name: Run Tests
               shell: bash
