--- a/docker/client/Dockerfile-no-maven-windows
+++ b/docker/client/Dockerfile-no-maven-windows
@@ -2,6 +2,9 @@
 FROM mcr.microsoft.com/windows/servercore:ltsc2022
 COPY ./target/iginx-client-0.6.0-SNAPSHOT/ C:/iginx_client
 
+USER ContainerAdministrator
+ENV JAVA_HOME "C:\jdk\jdk-11.0.2"
+RUN setx /M PATH "%JAVA_HOME%\bin;%PATH%"
 SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
 
 # 下载 JDK
@@ -9,8 +12,8 @@ ADD https://download.java.net/java/GA/jdk11/9/GPL/openjdk-11.0.2_windows-x64_bin
 
 # 解压 JDK
 RUN Expand-Archive -Path C:/temp/jdk.zip -DestinationPath C:/jdk
-RUN $env:JAVA_HOME = 'C:\jdk\jdk-11.0.2'; \
-    setx /M PATH \"$env:JAVA_HOME\bin;$env:PATH\"
+ENV JAVA_HOME C:\jdk\jdk-11.0.2
+ENV PATH $JAVA_HOME\bin;$PATH
 
 RUN New-Item -Path 'C:/iginx_client/logs' -ItemType Directory
 RUN New-Item -Path 'C:/iginx_client/data' -ItemType Directory
