--- a/docker/client/Dockerfile-no-maven-windows
+++ b/docker/client/Dockerfile-no-maven-windows
@@ -2,6 +2,7 @@
 FROM mcr.microsoft.com/windows/servercore:ltsc2022
 COPY ./target/iginx-client-0.6.0-SNAPSHOT/ C:/iginx_client
 
+USER ContainerAdministrator
 SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
 
 # 下载 JDK
@@ -9,11 +10,12 @@ ADD https://download.java.net/java/GA/jdk11/9/GPL/openjdk-11.0.2_windows-x64_bin
 
 # 解压 JDK
 RUN Expand-Archive -Path C:/temp/jdk.zip -DestinationPath C:/jdk
-ENV JAVA_HOME C:\jdk\jdk-11.0.2
-ENV PATH $JAVA_HOME\bin;$PATH
 
 RUN New-Item -Path 'C:/iginx_client/logs' -ItemType Directory
 RUN New-Item -Path 'C:/iginx_client/data' -ItemType Directory
 #USER ContainerUser
+
+ENV JAVA_HOME C:\jdk\jdk-11.0.2
+ENV PATH $JAVA_HOME\bin;$PATH
 
 ENTRYPOINT ["cmd", "/c", "ping -t localhost > NUL"]
