feat(relational): change postgresql datasource to relational datasource (#320)
将PG对接层改造为relational对接层，使得该对接层可以直接通过JDBC对接关系数据库。

将PG对接层改造为relational对接层。具体每个关系数据库特殊的地方，实现了一个AbstractRelationalMeta、以及数据类型转换器IDataTypeTransformer，如果要扩充新的关系数据源，需要实现这两个类。AbstractRelationalMeta提供了不同关系数据源在语法上的细微差异，IDataTypeTransformer提供了不同数据源的数据类型到IGinX数据类型的转换。还需要在relational/Constants.java中的classMap中配置数据源名与对应的meta类。
如果不通过代码来扩充数据源，可以通过JDBCMeta来读取配置文件来实现。配置文件示例参考dataSources/relational/src/main/resources/mysql-meta-template.properties，将配置文件路径放置在config的storageengine参数中即可，同时还要将相应的jar包放置在driver/relational中。具体配置方式参考飞书文档《通过配置文件添加新的关系数据源》。
引入了通用的连接池HikariCP代替原本的PGConnectionDatasource，能够在不同数据源上通用。HikariCP是目前性能最好的连接池，SpringBoot已引入其作为默认连接池；且其jar包小巧，仅有130KB。
重构了一批代码逻辑。重构了通过jdbc获取元数据如database列表、table列表、column列表的逻辑，将其提取为函数，减少了重复代码的编写，并且原本的方式需要频繁开发者自己获取连接并释放，容易忘记释放连接造成连接泄露。
在代码实践中，我们发现不同数据源驱动的jdbc会有一些不合理的细微差异，此类差异是无法事先察觉的，因此在扩充新的数据源时，可能会因为此类差异导致失败，届时需要对代码进行调试和调整：
MySQL驱动的JDBC在使用getTables函数获取元数据时，如果输入参数的tablename中含有特殊字符，需要加反引号包裹住，但getColumns函数的参数就不需要，而PG和Oceanbase也没有此类问题。
Oceanbase驱动的JDBC在使用getTables、getColumns函数时，会自动删去输入参数中转义过的反斜杠。而PG和MySQL就没有此类问题。
相关测试：

添加了MySQL的相关测试。MySQL对接层是通过JDBCMeta读取配置文件引入实现的，而PG对接层是通过代码实现的，这能够有效测试两种对接层引入方式。
将macos-latest改为macos-13。主要原因是macos-latest最近从macos 13升级成了macos 14，出现了部分数据源的二进制包未适配macos 14的arm架构，以及docker无法启动的问题。
在本地进行了Oceanbase的测试。通过JDBCMeta读取配置文件引入对接层，并在本地成功连接Oceanbase并通过SQLSessionIT测试。

--- a/.github/actions/dbRunner/action.yml
+++ b/.github/actions/dbRunner/action.yml
@@ -167,4 +167,22 @@ runs:
               paths: conf/config.properties
               statements: |
                   s/storageEngineList=127.0.0.1#6667/#storageEngineList=127.0.0.1#6667/g
-                  s/#storageEngineList=127.0.0.1#5432/storageEngineList=127.0.0.1#5432/g
+                  s/#storageEngineList=127.0.0.1#5432#relational#engine=postgresql/storageEngineList=127.0.0.1#5432#relational#engine=postgresql/g
+
+        - if: inputs.DB-name == 'MySQL'
+          name: chan
+          shell: bash
+          run: |
+              if [ "$RUNNER_OS" == "Linux" ]; then
+                chmod +x "${GITHUB_WORKSPACE}/.github/scripts/dataSources/mysql.sh"
+                "${GITHUB_WORKSPACE}/.github/scripts/dataSources/mysql.sh" 3306 3307 3308
+              elif [ "$RUNNER_OS" == "Windows" ]; then
+                chmod +x "${GITHUB_WORKSPACE}/.github/scripts/dataSources/mysql_windows.sh"
+                "${GITHUB_WORKSPACE}/.github/scripts/dataSources/mysql_windows.sh" 3306 3307 3308
+              elif [ "$RUNNER_OS" == "macOS" ]; then
+                chmod +x "${GITHUB_WORKSPACE}/.github/scripts/dataSources/mysql_macos.sh"
+                "${GITHUB_WORKSPACE}/.github/scripts/dataSources/mysql_macos.sh" 3306 3307 3308
+              else
+                echo "$RUNNER_OS is not supported"
+                exit 1
+              fi
