--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -30,6 +30,7 @@ jobs:
                         "Redis",
                         "MongoDB",
                         "Parquet",
+                        "MySQL",
                     ]
                 metadata: [zookeeper]
         runs-on: ${{ matrix.os }}
