--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,11 @@
             </dependency>
             <dependency>
                 <groupId>cn.edu.tsinghua</groupId>
+                <artifactId>relational</artifactId>
+                <version>0.6.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.edu.tsinghua</groupId>
                 <artifactId>redis</artifactId>
                 <version>${project.version}</version>
             </dependency>
