--- a/.github/workflows/remote-test.yml
+++ b/.github/workflows/remote-test.yml
@@ -41,6 +41,11 @@ jobs:
                   python-version: ${{ matrix.python-version }}
                   java: ${{ matrix.java }}
 
+            - if: runner.os != 'Windows'
+              name: macos addr
+              run: |
+                ifconfig
+
             - if: runner.os == 'Windows'
               name: Set up Docker Firewall on Windows
               run: |
