--- a/.github/workflows/remote-test.yml
+++ b/.github/workflows/remote-test.yml
@@ -19,7 +19,7 @@ jobs:
             matrix:
                 java: [8]
                 python-version: ["3.9"]
-                os: [macos-13, windows-latest]
+                os: [macos-13]
                 #                os: [ubuntu-latest, macos-13, windows-latest]
                 DB-name:
                     [
