docker already installed?

--- a/.github/workflows/remote-test.yml
+++ b/.github/workflows/remote-test.yml
@@ -12,7 +12,7 @@ concurrency:
     cancel-in-progress: true
 
 jobs:
-    Union-DB-Test:
+    Remote-Server-Test:
         timeout-minutes: 30
         strategy:
             fail-fast: false
