--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -37,10 +37,8 @@ runs:
           name: Install Docker on MacOS
           shell: bash
           run: |
-              brew update
               brew install docker colima
-              colima version
-              colima start --cpu 3 --memory 6 --disk 100 --vm-type=qemu --mount-type=sshfs --dns=1.1.1.1
+              colima start
               docker --version
 
         - if: inputs.scope=='all'
