--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -37,8 +37,10 @@ runs:
           name: Install Docker on MacOS
           shell: bash
           run: |
+              brew update
               brew install docker colima
-              colima start
+              colima version
+              colima start --cpu 3 --memory 6 --disk 100 --vm-type=qemu --mount-type=sshfs --dns=1.1.1.1
               docker --version
 
         - if: inputs.scope=='all'
