--- a/.github/workflows/polystore-benchmark-test.yml
+++ b/.github/workflows/polystore-benchmark-test.yml
@@ -93,13 +93,20 @@ jobs:
                   mvn test -q -Dtest=TPCHDataInsertionIT -DfailIfNoTests=false -P-format
                   chmod +x "${GITHUB_WORKSPACE}/.github/scripts/benchmarks/parquet.sh"
                   "${GITHUB_WORKSPACE}/.github/scripts/benchmarks/parquet.sh"
+                
 
             - name: Run session test
+              if: always()
               shell: bash
               run: |
-                  pwd
-                  if [ "$RUNNER_OS" == "Windows" ]; then
-                    python test/src/test/java/cn/edu/tsinghua/iginx/integration/polybench/TPCHRunner.py
-                  else
-                    python3 test/src/test/java/cn/edu/tsinghua/iginx/integration/polybench/TPCHRunner.py
-                  fi
+                mvn test -q -Dtest=TPCHRunner -DfailIfNoTests=false -P-format
+
+#            - name: Run session test
+#              shell: bash
+#              run: |
+#                  pwd
+#                  if [ "$RUNNER_OS" == "Windows" ]; then
+#                    python test/src/test/java/cn/edu/tsinghua/iginx/integration/polybench/TPCHRunner.py
+#                  else
+#                    python3 test/src/test/java/cn/edu/tsinghua/iginx/integration/polybench/TPCHRunner.py
+#                  fi
