--- a/.github/workflows/remote-test.yml
+++ b/.github/workflows/remote-test.yml
@@ -1,15 +1,36 @@
 name: "Remote Service Test"
 on:
-    pull_request:
-        types: [opened, reopened]
-        branches:
-            - main
+  workflow_call:
+    inputs:
+      java-matrix:
+        description: "The java version to run the test on"
+        type: string
+        required: false
+        default: '["8"]'
+      python-matrix:
+        description: "The python version to run the test on"
+        type: string
+        required: false
+        default: '["3.9"]'
+      os-matrix:
+        description: "The operating system to run the test on"
+        type: string
+        required: false
+        default: '["ubuntu-latest", "macos-13", "windows-latest"]'
+      metadata-matrix:
+        description: "The metadata to run the test on"
+        type: string
+        required: false
+        default: '["zookeeper", "etcd"]'
+      db-matrix:
+        description: "The database to run the test on"
+        type: string
+        required: false
+        default: '["FileSystem", "IoTDB12", "InfluxDB", "PostgreSQL", "Redis", "MongoDB", "Parquet", "MySQL"]'
+
 env:
     VERSION: 0.6.0-SNAPSHOT
     FUNCTEST: RemoteUDFIT
-concurrency:
-    group: ${{ github.workflow }}-${{ github.ref }}
-    cancel-in-progress: true
 
 jobs:
     Remote-Server-Test:
@@ -17,20 +38,11 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                java: [8]
-                python-version: ["3.9"]
-                os: [ubuntu-latest, macos-13, windows-latest]
-                DB-name:
-                    [
-                        "IoTDB12",
-                        "InfluxDB",
-                        "Parquet",
-                        "PostgreSQL",
-                        "FileSystem",
-                        "Redis",
-                        "MongoDB",
-                    ]
-                metadata: [zookeeper]
+                java: ${{ fromJSON(inputs.java-matrix) }}
+                python-version: ${{ fromJSON(inputs.python-matrix) }}
+                os: ${{ fromJSON(inputs.os-matrix) }}
+                metadata: ${{ fromJSON(inputs.metadata-matrix) }}
+                DB-name: ${{ fromJSON(inputs.db-matrix) }}
         runs-on: ${{ matrix.os }}
         steps:
             - uses: actions/checkout@v2
