--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -30,6 +30,16 @@ runs:
               tzutil /s "China Standard Time"
               echo "JAVA_OPTS=-Xmx4g -Xms2g" >> %GITHUB_ENV%
 
+        - if: runner.os == 'macOS'
+          name: Install Docker on MacOS
+          shell: bash
+          run: |
+              brew update
+              brew install docker colima
+              colima version
+              colima start --cpu 3 --memory 6 --disk 100 --vm-type=qemu --mount-type=sshfs --dns=1.1.1.1
+              docker --version
+
         - if: inputs.scope=='all'
           name: Set up Python ${{ inputs.python-version }}
           uses: actions/setup-python@v5
