--- a/conf/config.properties
+++ b/conf/config.properties
@@ -51,7 +51,11 @@ maxCachedPhysicalTaskPerStorage=500
 queryOptimizer=rbo
 
 # 优化器规则
-ruleBasedOptimizer=NotFilterRemoveRule=on,FragmentPruningByFilterRule=on,ColumnPruningRule=on,FragmentPruningByPatternRule=on,ConstantPropagationRule=on,FilterConstantFoldingRule=on,RowTransformConstantFoldingRule=on
+ruleBasedOptimizer=NotFilterRemoveRule=on,FragmentPruningByFilterRule=on,ColumnPruningRule=on,FragmentPruningByPatternRule=on,ConstantPropagationRule=on,\
+  FilterConstantFoldingRule=on,RowTransformConstantFoldingRule=on,FilterPushDownAddSchemaPrefixRule=on,FilterPushDownAddSchemaPrefixRule=on,\
+  FilterPushDownPathUnionJoinOuterJoinRule=on,FilterPushDownProjectReorderSortRule=on,FilterPushDownRenameRule=on,FilterPushDownSelectRule=on,\
+  FilterPushDownSetOpRule=on,FilterPushDownTransformRule=on,FilterPushIntoJoinConditionRule=on,FilterPushOutJoinConditionRule=on,FilterPushDownGroupByRule=on
+
 
 # ParallelFilter触发行数
 parallelFilterThreshold=10000
