debug try regression

--- a/.github/workflows/polystore-benchmark-test.yml
+++ b/.github/workflows/polystore-benchmark-test.yml
@@ -178,12 +178,22 @@ jobs:
               run: |
                 pwd
                 ls
-                mkdir ./IGinX/.github/scripts/benchmarks
-                cp .github/scripts/benchmarks/parquet.sh ./IGinX/.github/scripts/benchmarks/parquet.sh
+                mkdir ./IGinX/tpc/TPC-H V3.0.1/data
+                cp tpc/TPC-H V3.0.1/data/nation.csv IGinX/tpc/TPC-H V3.0.1/data/nation.csv
                 cd IGinX
-                export GITHUB_WORKSPACE=$(pwd)
-                chmod +x "${GITHUB_WORKSPACE}/.github/scripts/benchmarks/parquet.sh"
-                "${GITHUB_WORKSPACE}/.github/scripts/benchmarks/parquet.sh"
+                output_file="../IGinX/tpc/TPC-H V3.0.1/data/nation.csv"
+                # 插入数据
+                COMMAND1="LOAD DATA FROM INFILE \"$output_file\" AS CSV INTO nation(key, n_nationkey, n_name, n_regionkey, n_comment);"
+                SCRIPT_COMMAND="bash client/target/iginx-client-0.6.0-SNAPSHOT/sbin/start_cli.sh -e '{}'"
+                bash -c "chmod +x client/target/iginx-client-0.6.0-SNAPSHOT/sbin/start_cli.sh"
+                
+                if [ "$RUNNER_OS" = "Linux" ]; then
+                bash -c "echo '$COMMAND1' | xargs -0 -t -i ${SCRIPT_COMMAND}"
+                elif [ "$RUNNER_OS" = "Windows" ]; then
+                bash -c "client/target/iginx-client-0.6.0-SNAPSHOT/sbin/start_cli.bat -e '$COMMAND1'"
+                elif [ "$RUNNER_OS" = "macOS" ]; then
+                sh -c "echo '$COMMAND1' | xargs -0 -t -I F sh client/target/iginx-client-0.6.0-SNAPSHOT/sbin/start_cli.sh -e 'F'"
+                fi
 
             - name: Run session test
               if: always()
