--- a/.github/workflows/polystore-benchmark-test.yml
+++ b/.github/workflows/polystore-benchmark-test.yml
@@ -178,7 +178,9 @@ jobs:
               run: |
                 pwd
                 ls
-                mkdir ./IGinX/tpc/TPC-H V3.0.1/data
+                mkdir IGinX/tpc
+                mkdir "IGinX/tpc/TPC-H V3.0.1"
+                mkdir "IGinX/tpc/TPC-H V3.0.1/data"
                 cp tpc/TPC-H V3.0.1/data/nation.csv IGinX/tpc/TPC-H V3.0.1/data/nation.csv
                 cd IGinX
                 output_file="../IGinX/tpc/TPC-H V3.0.1/data/nation.csv"
